deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-java-web-app
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: my-java-web-app
  template:
    metadata:
      labels:
        app: my-java-web-app
    spec:
      containers:
        - name: my-java-web-app
          image: <Container-registry-name>.azurecr.io/java-hello-world-repo:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: my-java-web-app-service
  namespace: default
spec:
  type: LoadBalancer
  selector:
    app: my-java-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
