service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-java-web-app-service
spec:
  type: LoadBalancer
  selector:
    app: my-java-web-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
